--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
         </div>
     </div>
     <dialog id="settings-modal" tabindex="-1">
+        <span id="close-modal" class="button" tabindex="0">x</span>
         <div>
             <h1 id="settings-header">settings</h1>
-            <span>theme: </span><a id="theme" class="button">dark</a><br>
-            <span>hover: </span><a id="hover" class="button">off</a><br>
-            <label for="radius">tile corner radius: </label><input type="number" id="radius" class="button" style="width: 2.5rem;" min="0" value="8"></a><label for="radius"> px</label><br><br>
+            <span>theme: </span><a id="theme" class="button" tabindex="0">dark</a><br>
+            <span>hover: </span><a id="hover" class="button" tabindex="0">off</a><br>
+            <label for="radius">tile corner radius: </label><input type="number" id="radius" style="width: 2.5rem;" min="0" value="8"></a><label for="radius"> px</label><br><br>
             <h3 class="settings-sub">advanced: </h3>
-            <a id="clear" class="button">clear cache</a><br>
-            <label for="bright">brightness threshold: </label><input type="number" id="bright" class="button" style="width: 2.5rem;" min="0" max="255" value="128" onblur="if(this.value>255){this.value=255} if(this.value<0){this.value=0}"></a>
+            <a id="clear" class="button" tabindex="0">clear cache</a><br>
+            <label for="bright">brightness threshold: </label><input type="number" id="bright" style="width: 2.5rem;" min="0" max="255" value="128"></a><br>
+            <span>debug: </span><a id="debug" class="button" tabindex="0">off</a><br>
         </div>
-        <span id="close-modal" class="button" tabindex="0">x</span>
     </dialog>
     <script src="lib/scripts/fish.js"></script>
     <script src="lib/scripts/settings.js"></script>
