--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <h1 id="settings-header">settings</h1>
             <span>theme: </span><a id="theme" class="button" tabindex="0">dark</a><br>
             <span>hover: </span><a id="hover" class="button" tabindex="0">off</a><br>
-            <label for="radius">tile corner radius: </label><input type="number" id="radius" style="width: 2.5rem;" min="0" value="8"></a><label for="radius"> px</label><br><br>
+            <label for="radius">tile corner radius: </label><input type="number" id="radius" style="width: 2.5rem;" min="0" value="5"></a><label for="radius"> px</label><br>
+            <label for="border">tile border: </label><input type="number" id="border" style="width: 2.5rem;" min="0" max="10" value="2"></a><label for="border"> px</label><br><br>
             <h3 class="settings-sub">advanced: </h3>
             <a id="clear" class="button" tabindex="0">clear cache</a><br>
             <label for="bright">brightness threshold: </label><input type="number" id="bright" style="width: 2.5rem;" min="0" max="255" value="128"></a><br>
