--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="lib/styles/main.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="lib/img/Slipdee.png" type="image/png">
+    <link rel="shortcut icon" href="lib/img/SlipdeeIconCircle.png" type="image/png">
     <title>slidy puzzle thing</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
