--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <dialog id="settings-modal" tabindex="-1">
-        <span id="close-modal" class="button" tabindex="0">x</span>
+        <span id="close-settings" class="button" tabindex="0">x</span>
         <div>
             <h1 id="settings-header">settings</h1>
             <span>theme: </span><a id="theme" class="button" tabindex="0">dark</a><br>
@@ -30,6 +30,12 @@
             <a id="clear" class="button" tabindex="0">clear cache</a><br>
             <label for="bright">brightness threshold: </label><input type="number" id="bright" style="width: 2.5rem;" min="0" max="255" value="128"></a><br>
             <span>debug: </span><a id="debug" class="button" tabindex="0">off</a><br>
+        </div>
+    </dialog>
+    <dialog id="win-modal" tabindex="-1">
+        <span id="close-win" class="button" tabindex="0">x</span>
+        <div>
+            <h1>YOU WIN!</h1>
         </div>
     </dialog>
     <script src="lib/scripts/fish.js"></script>
